--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.2",
     "@prisma/client": "^5.20.0",
+    "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
     "next": "14.2.15",
+    "next-cloudinary": "^6.15.0",
     "react": "^18",
     "react-dom": "^18"
   },
